# spinmob

./: .SyncID  .SyncIgnore  .gitignore  .gitignore.BACKUP.6388.gitignore  .gitignore.rej  .travis.yml  Dockerfile  LICENSE.txt  MANIFEST  README.md  README.rst  README.txt  ___retired.py  __init__.py  _constants.py  _data.py  _data_old.py  _data_types.py  _databox.py  _dialogs.py  _fit.py  _fitting.py  _fitting_mess.py  _functions.py  _fusion_theme.py  _models.py  _plot.py  _plot_complex.py  _plot_image.py  _plot_magphase.py  _plot_parametric.py  _plot_realimag.py  _plot_xy.py  _plotting.py  _plotting_mess.py  _prefs.py  _pylab_colormap.py  _pylab_colorslider.py  _pylab_colorslider_frame.py  _pylab_helper.py  (+23 more)
0.-Python-Bootcamp/: Python_Tutorial.lyx
_tests/: run_all_tests.py  test__databox.py  test__egg.py  test__fitter.py  test__functions.py  test__plot.py
crimson/examples/: example_stream_RXA.py
daqmx/: __init__.py
edu/: __init__.py  _fitting.py
egg/: TODO.txt  __init__.py  _daqmx.py  _data.py  _dialogs.py  _gui.py  _syntax.py  _temporary_fixes.py  example_daq.py  example_from_wiki.py  example_from_wiki_2.py  example_other_widgets.py  example_really_basic.py  example_sliders.py  example_sweeper.py  temporary_fixes.py
egg/examples/: example_daq.py  example_from_wiki.py  example_other_widgets.py  example_really_basic.py  example_sweeper.py
tests/: _data_test.py  _data_types_test.py  run_all_tests.py  spinmob_tests.py  test.sh  test__data.py  test__databox.py  test__dialogs.py  test__edu.py  test__egg.py  test__fitter.py  test__functions.py  test__plot.py
(+28 files in other folders)
