[metadata]
name = spinmob
version = attr: spinmob.__version__
author = Jack Sankey
author_email = jack.sankey@gmail.com
description = Data handling, plotting, analysis, and GUI building for scientific labs
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.txt
url = https://github.com/Spinmob/spinmob
project_urls =
    Source Code = https://github.com/Spinmob/spinmob
    Bug Tracker = https://github.com/Spinmob/spinmob/issues
    Wiki = https://github.com/Spinmob/spinmob/wiki
keywords = science, research, data, analysis, plotting, visualization, GUI
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
package_dir =
     = src
python_requires = >=3,<4
install_requires =
    scipy
    matplotlib

[options.packages.find]
where = src

[options.extras_require]
fit = lmfit
GUI = pyqtgraph>=0.11,<1
